assets/sunpages.css
:root {
    --primary-color: #e56623;
    --secondary-color: #b09c4d;
    --background-color: #1c1715;
    --text-color: #dad4ce;
    --font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

*, *:before, *:after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--background-color);
    color: var(--text-color);
    font-family: var(--font-family), sans-serif;
    line-height: 1.6;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 2rem;
    justify-content: center;
    height: 100dvh;
}

h1 {
    font-size: 2.5rem;
    color: var(--primary-color);
    margin-bottom: 1rem;
}

p {
    font-size: 1.2rem;
    color: var(--text-color);
    max-width: 600px;
    text-align: center;
    margin-bottom: 0.5rem;
}

a {
    color: var(--secondary-color);
    text-decoration: none;
    font-weight: bold;
}

a:hover {
    text-decoration: underline;
}

.noscript-warning {
    background-color: var(--primary-color);
    color: var(--background-color);
    padding: 1rem;
    text-align: center;
    font-size: 1.2rem;
    margin-bottom: 1rem;
}

.btn-sundev {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-top: 1rem;
    gap: 0.5rem;
    background-color: var(--primary-color);
    color: var(--background-color);
    padding: 0.5rem 1rem;
    border: none;
    border-radius: 4px;
    font-size: 1rem;
    cursor: pointer;
    text-decoration: none;
    transition: background-color 0.3s ease;
}

.btn-sundev:hover {
    text-decoration: none;
    background-color: var(--secondary-color);
}

